crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_symbol__enumerate_flat.snap
---
source: crates/texlab/tests/lsp/text_document/document_symbol.rs
expression: "find_symbols(r#\"\n%! main.tex\n\\documentclass{article}\n\n\\begin{document}\n\n\\begin{enumerate}\n    \\item\\label{it:foo} Foo\n    \\item\\label{it:bar} Bar\n    \\item[Baz] Baz\n    \\item[Qux]\\label{it:qux} Qux\n\\end{enumerate}\n\n\\end{document}\n|\n\n%! main.aux\n\\relax\n\\newlabel{it:foo}{{1}{1}}\n\\newlabel{it:qux}{{2}{1}}\"#,\n    serde_json::json!({}), serde_json::Value::Null)"
---
[
  {
    "name": "Enumerate",
    "kind": 10,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 9,
          "character": 15
        }
      }
    }
  },
  {
    "name": "1",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 27
        }
      }
    }
  },
  {
    "name": "Item",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 27
        }
      }
    }
  },
  {
    "name": "Baz",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 18
        }
      }
    }
  },
  {
    "name": "2",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 32
        }
      }
    }
  }
]
