crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_symbol__ignored_patterns.snap
---
source: crates/texlab/tests/lsp/text_document/document_symbol.rs
expression: "find_symbols(r#\"\n%! main.tex\n\\documentclass{article}\n\n\\begin{document}\n\n\\begin{equation}\\label{eq:foo}\n    Foo\n\\end{equation}\n \n\\begin{enumerate}\n    \\item Foo\n    \\item Bar\n\\end{enumerate}\n\n\\end{document}\n|\"#,\n    serde_json::json!({}),\n    serde_json::json!({\n            \"symbols\" : { \"ignoredPatterns\" : [\"Item\", \"Enumerate\"] }\n        }))"
---
[
  {
    "name": "Equation",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "redacted://main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 6,
          "character": 14
        }
      }
    }
  }
]
