crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_symbol__section_nested.snap
---
source: tests/lsp/text_document/document_symbol.rs
expression: "find_symbols(r#\"\n%! main.tex\n\\documentclass{article}\n\n\\begin{document}\n\n\\section{Foo}\n\n\\section{Bar}\\label{sec:bar}\n\n\\subsection{Baz}\\label{sec:baz}\n\n\\end{document}\n|\n\n%! main.aux\n\\relax\n\\@writefile{toc}{\\contentsline {section}{\\numberline {1}Foo}{1}\\protected@file@percent }\n\\@writefile{toc}{\\contentsline {section}{\\numberline {2}Bar}{1}\\protected@file@percent }\n\\newlabel{sec:bar}{{2}{1}}\"#,\n    serde_json::json!({\n            \"textDocument\" :\n            {\n                \"documentSymbol\" :\n                { \"hierarchicalDocumentSymbolSupport\" : true, },\n            },\n        }), serde_json::Value::Null)"
---
[
  {
    "name": "Foo",
    "kind": 2,
    "deprecated": false,
    "range": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 4,
        "character": 13
      }
    },
    "selectionRange": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 4,
        "character": 13
      }
    },
    "children": []
  },
  {
    "name": "2 Bar",
    "detail": "sec:bar",
    "kind": 2,
    "deprecated": false,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 13
      },
      "end": {
        "line": 6,
        "character": 28
      }
    },
    "children": [
      {
        "name": "Baz",
        "detail": "sec:baz",
        "kind": 2,
        "deprecated": false,
        "range": {
          "start": {
            "line": 8,
            "character": 0
          },
          "end": {
            "line": 8,
            "character": 31
          }
        },
        "selectionRange": {
          "start": {
            "line": 8,
            "character": 16
          },
          "end": {
            "line": 8,
            "character": 31
          }
        },
        "children": []
      }
    ]
  }
]
