crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_symbol__theorem_nested.snap
---
source: tests/lsp/text_document/document_symbol.rs
expression: "find_symbols(r#\"\n%! main.tex\n\\documentclass{article}\n\\usepackage{amsthm}\n\\newtheorem{lemma}{Lemma}\n\n\\begin{document}\n\n\\begin{lemma}[Foo]\\label{thm:foo}\n    Foo\n\\end{lemma}\n\n\\begin{lemma}\\label{thm:bar}\n    Bar\n\\end{lemma}\n\n\\begin{lemma}\\label{thm:baz}\n    Baz\n\\end{lemma}\n\n\\begin{lemma}[Qux]\n    Qux\n\\end{lemma}\n\n\\end{document}\n|\n\n%! main.aux\n\\relax\n\\newlabel{thm:foo}{{1}{1}}\n\\newlabel{thm:bar}{{2}{1}}\"#,\n    serde_json::json!({\n            \"textDocument\" :\n            {\n                \"documentSymbol\" :\n                { \"hierarchicalDocumentSymbolSupport\" : true, },\n            },\n        }), serde_json::Value::Null)"
---
[
  {
    "name": "Lemma 1 (Foo)",
    "detail": "thm:foo",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 18
      },
      "end": {
        "line": 6,
        "character": 33
      }
    },
    "children": []
  },
  {
    "name": "Lemma 2",
    "detail": "thm:bar",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 10,
        "character": 0
      },
      "end": {
        "line": 12,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 10,
        "character": 13
      },
      "end": {
        "line": 10,
        "character": 28
      }
    },
    "children": []
  },
  {
    "name": "Lemma",
    "detail": "thm:baz",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 16,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 14,
        "character": 13
      },
      "end": {
        "line": 14,
        "character": 28
      }
    },
    "children": []
  },
  {
    "name": "Lemma (Qux)",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 18,
        "character": 0
      },
      "end": {
        "line": 20,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 18,
        "character": 0
      },
      "end": {
        "line": 20,
        "character": 11
      }
    },
    "children": []
  }
]
